--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rust_first"
 version = "0.1.0"
 authors = ["Johannes Ahlmann <johannes@fluquid.com>"]
+include = ["src/**/*", "Cargo.toml"]
 
 [dependencies]
 itertools = "0.7.3"
+
